demo_local/cnc-gui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnc-kernels
  labels:
    app: infrastructure
    system: cnc-kernels
    environment: staging
spec:
  selector:
    matchLabels:
      app: infrastructure
      system: cnc-kernels
      environment: staging
  template:
    metadata:
      labels:
        app: infrastructure
        system: cnc-kernels
        environment: staging
    spec:
      imagePullSecrets:
      - name: gitlab-credentials
      containers:
      - name: cnc-kernel-gui
        image: git.isw.uni-stuttgart.de:5000/projekte/forschung/2021_bmwi_sdm4fzi/isw4_konfiguration_und_deployment/cnc-gui:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /app/appsettings.json
          subPath: appsettings.json
        resources: {}
      volumes:
      - name: config-volume
        configMap:
          name: cnc-gui-conf
---
apiVersion: v1
kind: Service
metadata:

  name: cnc-kernels
  labels:
    app: infrastructure
    system: cnc-kernels
    environment: staging
spec:
  type: NodePort
  selector:
    app: infrastructure
    system: cnc-kernels
    environment: staging
  ports:
  - port: 5000
    targetPort: http
    protocol: TCP
    name: http
    nodePort: 30081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:

  name: cnc-kernels
  labels:
    app: infrastructure
    system: cnc-kernels
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cnc-kernels
            port:
              name: http
