demo_local/infrastructure-gui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infrastructure-messe-gui

  labels:
    app: infrastructure-messe-gui
    system: infrastructure-messe-gui
    environment: staging
spec:
  selector:
    matchLabels:
      app: infrastructure
      system: infrastructure-messe-gui
      environment: staging
  template:
    metadata:
      labels:
        app: infrastructure
        system: infrastructure-messe-gui
        environment: staging
    spec:
      serviceAccount: infrastructure-messe-gui
      serviceAccountName: infrastructure-messe-gui
      imagePullSecrets:
        - name: gitlab-credentials
      containers:
      - name: infrastructure-messe-gui
        image: git.isw.uni-stuttgart.de:5000/projekte/forschung/2021_bmwi_sdm4fzi/isw9_forschungsdemonstrator/maschinenfabrik/infrastructure-messe-gui:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 5000
            protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /app/appsettings.json
          subPath: appsettings.json
      volumes:
      - name: config-volume
        configMap:
          name: infrastructure-messe-gui-conf
---
apiVersion: v1
kind: Service
metadata:

  name: infrastructure-messe-gui
  labels:
    app: infrastructure
    system: infrastructure-messe-gui
    environment: staging
spec:
  type: NodePort
  selector:
    app: infrastructure
    system: infrastructure-messe-gui
    environment: staging
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
      nodePort: 30080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:

  name: infrastructure-messe-gui
  labels:
    app: infrastructure
    system: infrastructure-messe-gui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: containers.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infrastructure-messe-gui
                port:
                  name: http
